[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/background.tex" type="Texture" id=2]
[ext_resource path="res://assets/textures/btn_menu.tex" type="Texture" id=3]
[ext_resource path="res://assets/textures/btn_menu_pressed.tex" type="Texture" id=4]
[ext_resource path="res://assets/fonts/simpleness_65.fnt" type="BitmapFont" id=5]
[ext_resource path="res://assets/textures/menu_watermelon.tex" type="Texture" id=6]

[sub_resource type="Animation" id=1]

resource/name = "idle"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("watermelon:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.5, 3 ), "transitions":FloatArray( -2, -2, -2 ), "update":0, "values":[ Vector2( 467.525, 508.536 ), Vector2( 467.525, 483.929 ), Vector2( 467.525, 508.536 ) ] }

[sub_resource type="Animation" id=2]

resource/name = "intro"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("btn_how_to_play:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0.5, 0.8 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 1925, 772 ), Vector2( 929, 772 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("btn_statistics:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.4, 0.7 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 1927, 552 ), Vector2( 929, 552 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("btn_upgrade_rocket:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.3, 0.6 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 1925, 334 ), Vector2( 929, 334 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("btn_start_game:rect/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.2, 0.5 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 1924, 124 ), Vector2( 929, 124 ) ] }
tracks/4/type = "value"
tracks/4/path = NodePath("watermelon:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0.1, 0.8 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 467.525, 1291.84 ), Vector2( 467.525, 508.536 ) ] }
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0.9 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"_on_intro_end" } ] }

[sub_resource type="Animation" id=3]

resource/name = "outro"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("btn_how_to_play:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0.3, 0.6 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ Vector2( 929, 772 ), Vector2( 1930, 772 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("btn_statistics:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.2, 0.5 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ Vector2( 929, 552 ), Vector2( 1930, 552 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("btn_upgrade_rocket:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.1, 0.4 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ Vector2( 929, 334 ), Vector2( 1930, 334 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("btn_start_game:rect/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0, 0.3 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ Vector2( 929, 124 ), Vector2( 1930, 124 ) ] }
tracks/4/type = "value"
tracks/4/path = NodePath("watermelon:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/5/type = "value"
tracks/5/path = NodePath("watermelon:transform/scale")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ] }
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = { "times":FloatArray( 0.7 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"_on_outro_end" } ] }

[node name="menu" type="Node"]

script/script = ExtResource( 1 )

[node name="background" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="btn_start_game" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1924.0
margin/top = 124.0
margin/right = 2768.0
margin/bottom = 292.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
__meta__ = { "_edit_group_":true }

[node name="lbl" type="Label" parent="btn_start_game"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 841.0
margin/bottom = 150.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Start game"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btn_upgrade_rocket" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1925.0
margin/top = 334.0
margin/right = 2769.0
margin/bottom = 502.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
__meta__ = { "_edit_group_":true }

[node name="lbl" type="Label" parent="btn_upgrade_rocket"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 841.0
margin/bottom = 150.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Choose rocket"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btn_statistics" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1927.0
margin/top = 552.0
margin/right = 2771.0
margin/bottom = 720.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
__meta__ = { "_edit_group_":true }

[node name="lbl" type="Label" parent="btn_statistics"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 841.0
margin/bottom = 150.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Statistics"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btn_how_to_play" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1925.0
margin/top = 772.0
margin/right = 2769.0
margin/bottom = 940.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
__meta__ = { "_edit_group_":true }

[node name="lbl" type="Label" parent="btn_how_to_play"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 841.0
margin/bottom = 150.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "How to play"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="watermelon" type="Sprite" parent="."]

transform/pos = Vector2( 467.525, 1291.84 )
texture = ExtResource( 6 )

[node name="anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 1 )
anims/intro = SubResource( 2 )
anims/outro = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "intro"

[connection signal="pressed" from="btn_start_game" to="." method="_on_btn_start_game_pressed"]

[connection signal="pressed" from="btn_upgrade_rocket" to="." method="_on_btn_upgrade_rocket_pressed"]

[connection signal="pressed" from="btn_statistics" to="." method="_on_btn_statistics_pressed"]


